Gestion de l'authentification et de l'autorisation des users

--- a/.env
+++ b/.env
@@ -27,3 +27,7 @@ APP_SECRET=d72fa5a19ea8f4d13291c445391c8cca
 DATABASE_URL="mysql://root:@127.0.0.1:3306/series?serverVersion=5.7&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+# MAILER_DSN=null://null
+###< symfony/mailer ###
